# pinetime-hello

./: Cargo.toml  Embed.toml  README.md
.cargo/: config
src/: main.rs
