[package]
authors = ["Henrik Böving <hargonix@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "pinetime-hello"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
rtt-target = { version = "0.2.2", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.1", features = ["cortex-m"] }

# this lets you use `cargo fix`!
[[bin]]
name = "pinetime-hello"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
